# ChangeLog for sys-libs/ncurses
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/ncurses/ChangeLog,v 1.56 2004/03/12 05:25:09 solar Exp $

  12 Mar 2004; <solar@gentoo.org> ncurses-5.4-r1.ebuild:
  ncurses fails to link properly with global LDFLAGS=-pie so we filter it

  08 Mar 2004; Bartosch Pixa <darkspecter@gentoo.org> ncurses-5.4-r1.ebuild,
  ncurses-5.4.ebuild:
  set ~ppc as 5.4 breaks building xfree on ppc

  07 Mar 2004; Joshua Kinard <kumba@gentoo.org> ncurses-5.3-r5.ebuild:
  Marked stable on mips.

*ncurses-5.4-r1 (03 Mar 2004)

  03 Mar 2004; Martin Schlemmer <azarah@gentoo.org> ncurses-5.4-r1.ebuild,
  files/ncurses-5.4-xterm.patch:
  Do not use current capabilities for xterm terminfo, but rather those of older
  xfree 4.3 (matches ncurses 5.3 behaviour ...).  Bug #43432.

*ncurses-5.4 (29 Feb 2004)

  29 Feb 2004; Martin Schlemmer <azarah@gentoo.org> ncurses-5.4.ebuild,
  files/ncurses-5.4-share-sed.patch, files/ncurses-5.4-xterm.patch:
  Update version, closes bug #43302.

  29 Feb 2004; Martin Schlemmer <azarah@gentoo.org> ncurses-5.3-r5.ebuild,
  files/ncurses-5.3-share-sed.patch:
  Sed replaces all 'share' in patch with 'lib', which causes sandbox errors with
  a PORTAGE_TMPDIR with 'share' in it, bug #42336.
  Patch by gna <gnagent2@yahoo.com.au>.

  21 Feb 2004; Brad House <brad_mssw@gentoo.org> ncurses-5.3-r5.ebuild:
  mark stable on amd64 and ppc64

  16 Feb 2004; Brandon Low <lostlogic@gentoo.org> ncurses-5.3-r5.ebuild:
  Bump to stable on ARM to fix a bad dep from less

  17 Jan 2004; Christian Birchinger <joker@gentoo.org> ncurses-5.3-r5.ebuild:
  Added sparc stable keyword

  16 Jan 2004; Joshua Kinard <kumba@gentoo.org> ncurses-5.3-r1.ebuild,
  ncurses-5.3-r2.ebuild, ncurses-5.3-r3.ebuild, ncurses-5.3-r4.ebuild,
  ncurses-5.3-r5.ebuild:
  Added gnuconfig support for mips in ncurses-5.3-r2 through -r5 and bumped -r1