@@ -1,23 +1,23 @@
-MD5 c1b0cfe8ee95eae9f10819268b22248b ChangeLog 9160
+MD5 8aeef0650f24cceab875946d37b65681 ChangeLog 9349
+MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 MD5 6eadb93d736e38cee7262e64629d0003 ncurses-5.3-r1.ebuild 2311
 MD5 6c106fbeea1c453e10d37667cefd35ae ncurses-5.3-r2.ebuild 2459
 MD5 af7a0de2f75ba90257759319bfdda6fc ncurses-5.3-r3.ebuild 2675
 MD5 ac5ab557d506a10a6781d80a16a91408 ncurses-5.3-r4.ebuild 2847
-MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 MD5 db75ec065134459591abd33360d27283 ncurses-5.3-r5.ebuild 3829
-MD5 4788bb1466bf2d55a8dae3ba00f6b973 ncurses-5.4-r1.ebuild 3917
-MD5 703ea276a76d413f6d31642ec0618551 ncurses-5.4.ebuild 3716
+MD5 f97161d5d024a68164ab19c946a62443 ncurses-5.4.ebuild 3711
+MD5 561ed52dd341716c485cfa3af1900f07 ncurses-5.4-r1.ebuild 3918
 MD5 cd8a694247cfd64ce864e99246a8d87f files/digest-ncurses-5.3-r1 64
 MD5 cd8a694247cfd64ce864e99246a8d87f files/digest-ncurses-5.3-r2 64
+MD5 cd8a694247cfd64ce864e99246a8d87f files/digest-ncurses-5.3-r3 64
+MD5 cd8a694247cfd64ce864e99246a8d87f files/digest-ncurses-5.3-r4 64
 MD5 fdef42c6fdd01e99c3e36b443e8a25c2 files/ncurses-5.2.20020511-gcc31.patch 703
 MD5 f96d1b4b0bf94f1d38ce950df0efb37e files/ncurses-5.3-xterm.patch 1002
-MD5 cd8a694247cfd64ce864e99246a8d87f files/digest-ncurses-5.3-r3 64
 MD5 2167b54d7c96964183554e767e5f5376 files/xterm-debian.ti 342
-MD5 cd8a694247cfd64ce864e99246a8d87f files/digest-ncurses-5.3-r4 64
 MD5 cd8a694247cfd64ce864e99246a8d87f files/digest-ncurses-5.3-r5 64
 MD5 143b9126206485a5faeb817fd94b1054 files/ncurses-5.3-coreutils.patch 1581
 MD5 a370aabb0870d2822a0ab839947919f3 files/digest-ncurses-5.4 64
-MD5 a370aabb0870d2822a0ab839947919f3 files/digest-ncurses-5.4-r1 64
 MD5 c5b265c81eb2dea26b66cd656c61e99c files/ncurses-5.3-share-sed.patch 686
 MD5 1ecbf68a55269d2cebeb997f6973fc1d files/ncurses-5.4-share-sed.patch 686
 MD5 61ecd5aac5ddbd35cc4d4a00282eed01 files/ncurses-5.4-xterm.patch 495
+MD5 a370aabb0870d2822a0ab839947919f3 files/digest-ncurses-5.4-r1 64
