@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/ncurses/Attic/ncurses-5.4-r1.ebuild,v 1.3 2004/03/12 05:25:09 solar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/ncurses/Attic/ncurses-5.4-r1.ebuild,v 1.4 2004/03/16 03:23:25 weeve Exp $
 
 inherit eutils flag-o-matic 64-bit gnuconfig
 filter-flags -fno-exceptions
@@ -11,7 +11,7 @@ SRC_URI="mirror://gnu/ncurses/${P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="5"
-KEYWORDS="x86 ~ppc sparc alpha hppa ~mips amd64 ia64 ppc64 s390"
+KEYWORDS="x86 ~ppc ~sparc alpha hppa ~mips amd64 ia64 ppc64 s390"
 IUSE="debug"
 
 DEPEND="virtual/glibc"
